--- a/client/views/index.html
+++ b/client/views/index.html
@@ -8,29 +8,34 @@
 	</head>
 	<body ng-app="todomvc">
 		<ng-view />
-
-		<script type="text/ng-template" id="todomvc-index.html">
-			<section id="todoapp">
-				<header id="header">
-					<form id="todo-form" ng-submit="addTodo()">
-						<input id="new-todo" placeholder="What needs to be done?" ng-model="newTodo" ng-disabled="saving" autofocus>
-					</form>
-				</header>
-				<section id="main" ng-show="todos.length" ng-cloak>
-					<ul id="todo-list">
-						<li ng-repeat="todo in todos" ng-class="{editing: todo == editedTodo}">
-							<div class="view">
-								<label ng-dblclick="editTodo(todo)">{{todo.title}}</label>
-								<button class="destroy" ng-click="removeTodo(todo)"></button>
-							</div>
-							<form ng-submit="saveEdits(todo, 'submit')">
-								<input class="edit" ng-trim="false" ng-model="todo.title" todo-escape="revertEdits(todo)" ng-blur="saveEdits(todo, 'blur')" todo-focus="todo == editedTodo">
-							</form>
-						</li>
-					</ul>
+			<script type="text/ng-template" id="todomvc-index.html">
+				<div class="todolist">
+				<section id="todoapp">
+					<header id="header">
+						<form id="todo-form" ng-submit="addTodo()">
+							<input id="new-todo" placeholder="What needs to be done?" ng-model="newTodo" ng-disabled="saving" autofocus>
+						</form>
+					</header>
+					<section id="main" ng-show="todos.length" ng-cloak>
+						<ul id="todo-list">
+							<li ng-repeat="todo in todos" ng-class="{editing: todo == editedTodo}">
+								<div class="view">
+									<label ng-dblclick="editTodo(todo)">{{todo.title}}</label>
+									<button class="destroy" ng-click="removeTodo(todo)"></button>
+								</div>
+								<form ng-submit="saveEdits(todo, 'submit')">
+									<input class="edit" ng-trim="false" ng-model="todo.title" todo-escape="revertEdits(todo)" ng-blur="saveEdits(todo, 'blur')" todo-focus="todo == editedTodo">
+								</form>
+							</li>
+						</ul>
+					</section>
 				</section>
-			</section>
-		</script>
+				</div>
+				<div class="challengeData">
+            		<h3>{{todo.title}}</h3>
+            		
+          		</div> 
+			</script>
 		<script src="lib/angular/angular.js"></script>
 		<script src="lib/angular-route/angular-route.js"></script>
 		<script src="/js/app.js"></script>
